--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,26 +1,30 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 23px;
-    color: black;
+* {
+  padding: 0px;
+  margin: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 23px;
+  color: black;
 }
 
-body{
-    background-color: rgb(129, 196, 244);
+body {
+  background-color: rgb(129, 196, 244);
 }
 
-header>h1{
-    color: white;
+header > h1 {
+  color: white;
+  margin: 15px;
+  text-align: center;
+}
+
+main {
+  width: 450px;
+  background-color: white;
+  margin: auto;
+  height: auto;
+  padding: 16px;
+}
+
+select{
     margin: 15px;
-    text-align: center;
-}
-
-
-main{
-    width: 450px;
-    background-color: white;
-    margin: auto;
-height: auto;
-
+    
 }
