--- a/estilo/style.css
+++ b/estilo/style.css
@@ -8,11 +8,12 @@
 
 body {
   background-color: rgb(129, 196, 244);
+  flex-direction: column;/*elementos se alinham verticalmente */
 }
 
 header > h1 {
   color: white;
-  margin: 15px;
+  margin: 25px;
   text-align: center;
 }
 
@@ -22,9 +23,14 @@ main {
   margin: auto;
   height: auto;
   padding: 16px;
+  text-align: center;
 }
 
 select{
-    margin: 15px;
-    
+  padding: 15px;
+  margin: 15px;
+}
+
+input{
+  padding: 5px;
 }
